# GObjectCreator2

./: .gitignore  ChangeLog  Makefile.am  README  configure.ac
data/: GOC.g  Makefile.am
examples/: Makefile.am  audio.goc  manual_changes.patch
examples/audio_example_edited/: audio_format.c  audio_format.h  audio_iplayer.h  audio_ogg_player.c  demo.c
examples/audio_example_generated/: audio_iplayer.c  audio_iplayer.h  audio_iplayer_marshaller.c  audio_ogg_player.h  audio_player_status.h
m4/: antlr3_check.m4  check_tbparser_version.py  tbparser_check.m4
src/: AUTHORS  MANIFEST.in  Makefile.am  setup.py
src/examples/: audio.goc  generate_audio_example.sh  manual_changes.patch
src/examples/audio_example_edited/: Makefile  audio_iplayer.h  audio_iplayer_marshaller.h  audio_ogg_player.c  audio_ogg_player.h
src/examples/audio_example_generated/: audio_error.h  audio_iplayer.h  audio_ogg_player.c  audio_ogg_player_prot.h  audio_player_status.c
src/gobjcreator2/: Makefile.am  __init__.py
src/gobjcreator2/input/: GOC.g  GOC.tokens  GOCLexer.py  GOCParser.py  __init__.py  goc_parser.py  goc_recognizer.py  goc_tree_adaptor.py  goc_visitor.py  reader.py
src/gobjcreator2/input/grammar/: attribute.py  class_def.py  enumeration_def.py  error_domain_def.py  flags_def.py  goc_grammar.py  include_stmt.py  intf_def.py  method.py  misc_rules.py  package_def.py  property.py  tokens.py  type_decl.py  type_name.py  util.py
src/gobjcreator2/metadef/: attribute.py  clif.py  constants.py  constructor.py  enums.py  error_domain.py  exceptions.py  gclass.py  genum.py  gflags.py  ginterface.py  gobject.py  gtype.py  method.py  method_info.py  package.py  parameter.py  property.py  signal.py  types.py
src/gobjcreator2/output/: __init__.py  annotations.py  class_intf_writer.py  error_domain_writer.py  file_name_manager.py  func_name_creator.py  genum_writer.py  gflags_writer.py  ginterface_writer.py  gobject_writer.py  marshaller_generator.py  sections.py  user_content.py  util.py  writer.py
src/gobjcreator2/test/: example.py  test.goc  test.py
src/scripts/: gobject_creator2.py
