examplesdir = $(datarootdir)/$(PACKAGE)/examples

dist_examples_DATA = \
audio.goc \
generate_audio_example.sh \
manual_changes.patch

editeddir = $(examplesdir)/audio_example_edited
dist_edited_DATA = \
audio_example_edited/audio_error.h \
audio_example_edited/audio_format.c \
audio_example_edited/audio_format.h \
audio_example_edited/audio_iplayer.c \
audio_example_edited/audio_iplayer.h \
audio_example_edited/audio_iplayer_marshaller.c \
audio_example_edited/audio_iplayer_marshaller.h \
audio_example_edited/audio_ogg_player.c \
audio_example_edited/audio_ogg_player.h \
audio_example_edited/audio_ogg_player_prot.h \
audio_example_edited/audio_player_status.c \
audio_example_edited/audio_player_status.h \
audio_example_edited/demo.c \
audio_example_edited/Makefile

generateddir = $(examplesdir)/audio_example_generated
dist_generated_DATA = \
audio_example_generated/audio_error.h \
audio_example_generated/audio_format.c \
audio_example_generated/audio_format.h \
audio_example_generated/audio_iplayer.c \
audio_example_generated/audio_iplayer.h \
audio_example_generated/audio_iplayer_marshaller.c \
audio_example_generated/audio_iplayer_marshaller.h \
audio_example_generated/audio_ogg_player.c \
audio_example_generated/audio_ogg_player.h \
audio_example_generated/audio_ogg_player_prot.h \
audio_example_generated/audio_player_status.c \
audio_example_generated/audio_player_status.h
